--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     </style>
 </head>
 <body>
+        
     <div class="container">
         <div class="sidebar">
             <ul>
                 <li>Hablar con Profesionales</li>
                 <li>Números de Ayuda</li>
-                <li>Opciones</li>
+                <li >Opciones</li>
             </ul>
         </div>
         <div class="main-content">
@@ -31,6 +32,7 @@
         </div>
     </div>
     <div class="user-info">
+        <button>fd</button>
         <div>Tu Nombre</div>
         <div>Info</div>
         <div>Ajustes de cuenta</div>
