--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li>Hablar con Profesionales</li>
                 <li>Números de Ayuda</li>
-                <li>Opciones</li>
+                <li>Opciones -</li>
             </ul>
         </div>
         <div class="main-content">
