--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="/chat/estilo.css">
     <title>Página de Chatbot</title>
 </head>
 <body>
@@ -39,6 +39,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="logic.js"></script>
+    <script src="/chat/logic.js"></script>
 </body>
 </html>
