--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <div class="sidebar">
             <ul>
-                <li>Hablar con Profesionales</li>
-                <li>Números de Ayuda</li>
+                <li><a href="/home/home.html">Home</a></li>
+                <li><a href="/hablar_profecionales/profecionales.html">Hablar con Profesionales</a></li>
+                <li><a href="/num_ayuda/num_ayuda.html">Números de Ayuda</a></li>
                 <li>Opciones -</li>
             </ul>
         </div>
