--- a/home/home.html
+++ b/home/home.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IA Social</title>
+  <!-- fuente de letra-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,11 +18,11 @@
 
 </head>
 
-<body>
+<body class="roboto-mono-body">
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="logo.png" alt="Logo" class="logo-img">
+        <img src="/img/logo4.jpg" alt="Logo" class="logo-img">
       </div>
       <ul class="menu">
         <li><a href="/home/home.html" class="menu-item">Home</a></li>
@@ -36,7 +41,9 @@
     </nav>
   </header>
   <main>
-
+    <div class="container_text">
+      <h1>IA de Sopoerte Emocional</h1>
+    </div>
   </main>
   <footer>
 
