--- a/home/home.html
+++ b/home/home.html
@@ -22,10 +22,10 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="/img/logo4.jpg" alt="Logo" class="logo-img">
+        <a href="./home.html "><img src="/img/logo4.jpg" alt="Logo" class="logo-img"></a>
       </div>
       <ul class="menu">
-        <li><a href="/home/home.html" class="menu-item">Home</a></li>
+        <!--<li><a href="/home/home.html" class="menu-item">Home</a></li>-->
         <li><a href="/index.html" class="menu-item">Chat</a></li>
         <li><a href="#" class="menu-item">Quiénes somos</a></li>
       </ul>
@@ -40,10 +40,14 @@
       </div>
     </nav>
   </header>
+
   <main>
-    <div class="container_text">
-      <h1>IA de Sopoerte Emocional</h1>
+    <div class="containerText">
+      <h1>SEIA</h1>
+      <h2>IA de soperte emocional</h2>
     </div>
+
+    <div class="containerTextLeft"></div>
   </main>
   <footer>
 
