--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="shortcut icon" href="./img/logoIA.png" type="image/x-icon">
     <link rel="stylesheet" href="/chat/chat.css">
-    <title>Página de Chatbot</title>
+    <title>SEIA Chat</title>
 </head>
 <body>
     <div class="container">
