--- a/home/home.html
+++ b/home/home.html
@@ -43,10 +43,15 @@
   <main>
     <div class="containerText">
       <h1>SEIA</h1>
-      <h2>IA de soperte emocional</h2>
+      <h2>Tu apoyo emocional, siempre disponible</h2>
+      <p>Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar emocional</p>
+      <button><a href="/index.html">CHAT</a></button>
+      <button type="button" class="btn btn-neomorph">Botón Neomorfista</button>
     </div>
 
-    <div class="containerTextLeft"></div>
+    <div class="containerTextLeft">
+      
+    </div>
   </main>
   <footer>
 
