--- a/home/home.html
+++ b/home/home.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="shortcut icon" href="/img/logoIA.png" type="image/x-icon">  
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/home.css">
   <title>SEIA</title>
 </head>
 
@@ -44,9 +44,8 @@
     <div class="containerText">
       <h1>SEIA</h1>
       <h2>Tu apoyo emocional, siempre disponible</h2>
-      <p>Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar emocional</p>
-      <button><a href="/index.html">CHAT</a></button>
-      <button type="button" class="btn btn-neomorph">Botón Neomorfista</button>
+      <p class="">Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar emocional</p>
+      <button type="button" class="btn btn-neomorph"><a href="/index.html">Chat</a></button>
     </div>
 
     <div class="containerTextLeft">
