--- a/chat/chat.html
+++ b/chat/chat.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="shortcut icon" href="./img/logoIA.png" type="image/x-icon">
-    <link rel="stylesheet" href="/chat/chat.css">
+    <link rel="shortcut icon" href="../img/logoIA.png" type="image/x-icon">
+    <link rel="stylesheet" href="./chat.css">
     <title>SEIA Chat</title>
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
             <ul>
-                <li><a href="/home/home.html">Home</a></li>
-                <li><a href="/hablar_profecionales/profecionales.html">Hablar con Profesionales</a></li>
-                <li><a href="/num_ayuda/num_ayuda.html">Números de Ayuda</a></li>
-                <li>Opciones -</li>
+                <a href="../home.html"><li>Home</li></a>
+                <a href="../hablar_profecionales/profecionales.html"><li>Hablar con Profesionales</li></a>
+                <a href="../num_ayuda/num_ayuda.html"><li>Números de Ayuda</li></a>
+                <a href="../opciones/opciones.html"><li>Opciones</li></a>
             </ul>
         </div>
         <div class="main-content">
             <div class="header">
-                <div class="logo"><img src="/img/logoIA.png" alt="logo"></div>
+                <div class="logo"><img src="../img/logoIA.png" alt="logo"></div>
                 <div class="description">SEIA</div>
             </div>
             <div id="chatbox"></div>
@@ -41,7 +41,7 @@
     </div>
 
     
-    <script src="/chat/logic.js"></script>
+    <script src="./logic.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 </html>
