--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="shortcut icon" href="/img/logoIA.png" type="image/x-icon">  
-  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="/home/css/home.css">
   <title>SEIA</title>
 </head>
 
@@ -21,11 +21,11 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="./home.html "><img src="/img/logo4.jpg" alt="Logo" class="logo-img"></a>
+       <button class="logoImg">SEIA</button>
       </div>
       <ul class="menu">
         <!--<li><a href="/home/home.html" class="menu-item">Home</a></li>-->
-        <li><a href="/index.html" class="menu-item">Chat</a></li>
+        <li><a href="./chat/chat.html" class="menu-item">Chat</a></li>
         <li><a href="#" class="menu-item">Quiénes somos</a></li>
       </ul>
       <div class="usuario">
@@ -45,7 +45,7 @@
       <h1>SEIA</h1>
       <h2>Tu apoyo emocional, siempre disponible</h2>
       <p class="">Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar emocional</p>
-      <button type="button" class="btn btn-neomorph"><a href="/index.html">Chat</a></button>
+      <button type="button" class="btn btn-neomorph"><a href="./chat/chat.html">Chat</a></button>
     </div>
 
     <div class="containerTextLeft">
@@ -59,7 +59,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="./js/main.js"></script>
+  <script src="./home/js/main.js"></script>
 </body>
 
 </html>
