--- a/chat/chat.html
+++ b/chat/chat.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="sidebar">
             <ul>
-                <a href="../home.html"><li>Home</li></a>
+                <a href="../index.html"><li>Home</li></a>
                 <a href="../hablar_profecionales/profecionales.html"><li>Hablar con Profesionales</li></a>
                 <a href="../num_ayuda/num_ayuda.html"><li>Números de Ayuda</li></a>
                 <a href="../opciones/opciones.html"><li>Opciones</li></a>
