--- a/chat/chat.html
+++ b/chat/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="shortcut icon" href="../img/logoIA.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../recursos/img/logoIA.png" type="image/x-icon">
     <link rel="stylesheet" href="./chat.css">
     <title>SEIA Chat</title>
 </head>
@@ -20,7 +20,7 @@
         </div>
         <div class="main-content">
             <div class="header">
-                <div class="logo"><img src="../img/logoIA.png" alt="logo"></div>
+                <div class="logo"><img src="../recursos/img/logoIA.png" alt="logo"></div>
                 <div class="description">SEIA</div>
             </div>
             <div id="chatbox"></div>
