--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="shortcut icon" href="/img/logoIA.png" type="image/x-icon">  
+  <link rel="shortcut icon" href="./recursos/img/logoIA.png" type="image/x-icon">  
   <link rel="stylesheet" href="/home/css/home.css">
   <title>SEIA</title>
 </head>
@@ -48,8 +48,12 @@
       <button type="button" class="btn btn-neomorph"><a href="./chat/chat.html">Chat</a></button>
     </div>
 
-    <div class="containerTextLeft">
-      
+
+    <div class="containerTextLeft container">
+    </div>
+
+    <div class="ContainerCat">
+      <img id="miGif" class="GatAnimated" src="./recursos/video/gifGato.gif" alt="Animación">
     </div>
   </main>
   <footer>
