--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- fuente de letra-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="shortcut icon" href="./recursos/img/logoIA.png" type="image/x-icon">  
-  <link rel="stylesheet" href="/home/css/home.css">
-  <title>SEIA</title>
+  <title>SEIA - Tu apoyo emocional siempre disponible</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="shortcut icon" href="./recursos/img/logoIA.png" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./home/css/home.css">
 </head>
 
 <body class="roboto-mono-body">
+
   <header>
-    <nav class="navbar">
-      <div class="logo">
-       <button class="logoImg">SEIA</button>
-      </div>
-      <ul class="menu">
-        <!--<li><a href="/home/home.html" class="menu-item">Home</a></li>-->
-        <li><a href="./chat/chat.html" class="menu-item">Chat</a></li>
-        <li><a href="#" class="menu-item">Quiénes somos</a></li>
-      </ul>
-      <div class="usuario">
-        <i class="fas fa-user usuario-icono"></i>
-        <div class="usuario-dropdown">
-          <ul>
-            <li><a href="#">Mi perfil</a></li>
-            <li><a href="#">Cerrar sesión</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!--- navbar-light bg-light para estilo claro-->
+      <div class="container">
+        <a class="navbar-brand" href="#"> <!---añadido navbar brand-->
+          <img src="./recursos/img/logoIA.png" alt="Logo" width="50" height="50"> <!---añadido imagen de logo-->
+          SEIA
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <!--- justify-content-end para alinear a la derecha-->
+          <ul class="navbar-nav"> <!--- navbar-nav para estilo de bootstrap-->
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a> <!--- home.html no es necesario-->
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./chat/chat.html">Chat</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Quiénes Somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="fas fa-user usuario-icono"></i></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -43,14 +49,39 @@
   <main>
     <div class="containerText">
       <h1>SEIA</h1>
-      <h2>Tu apoyo emocional, siempre disponible</h2>
-      <p class="">Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar emocional</p>
+      <h2>Tu apoyo emocional, siempre disponible.</h2>
+      <p>Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar
+        emocional. Disponible 24/7, de forma anónima y segura.</p>
       <button type="button" class="btn btn-neomorph"><a href="./chat/chat.html">Chat</a></button>
     </div>
 
 
     <div class="containerTextLeft container">
+      <div class="beneficios-container">
+        <h3>Beneficios Clave</h3>
+        <ul>
+          <li><i class="fas fa-clock"></i> Disponible 24/7</li>
+          <li><i class="fas fa-user-secret"></i> Anonimato y privacidad</li>
+          <li><i class="fas fa-comments"></i> Soporte personalizado</li>
+          <li><i class="fas fa-hand-holding-heart"></i> Enfoque en tu bienestar</li>
+          <li><i class="fas fa-wallet"></i> Asequible</li>
+        </ul>
+      </div>
     </div>
+    <!-- <div class="flexRight">
+      <div class="containerTextRight container">
+        <div class="testimonios-container">
+          <h3>Lo que dicen nuestros usuarios</h3>
+          <div class="card">
+            <div class="card-body">
+              <p class="card-text">"SEIA me ha ayudado mucho a manejar mi ansiedad. Me siento más tranquila y con
+                mayor control de mis emociones."</p>
+              <p class="card-text text-muted">- María, 28 años</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
     <div class="ContainerCat">
       <img id="miGif" class="GatAnimated" src="./recursos/video/gifGato.gif" alt="Animación">
