--- a/chat/chat.html
+++ b/chat/chat.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="user-info">
-        <i class="fas fa-user usuario-icono"></i>
+        <a href="../login/login.html"><i class="fas fa-user usuario-icono"></i></a>
     </div>
 
     
