--- a/login/login.html
+++ b/login/login.html
@@ -30,7 +30,7 @@
             <button class="button">Sign in</button>
             <div class="sign-up">
                Not a member?
-               <a href="#">signup now</a>
+               <a href="../registro/registro.html">signup now</a>
             </div>
          </form>
       </div>
