--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>SEIA - Tu apoyo emocional siempre disponible</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -13,12 +16,11 @@
 </head>
 
 <body class="roboto-mono-body">
-
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"> <!--- navbar-light bg-light para estilo claro-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Navegación principal">
       <div class="container">
-        <a class="navbar-brand" href="#"> <!---añadido navbar brand-->
-          <img src="./recursos/img/logoIA.png" alt="Logo" width="50" height="50"> <!---añadido imagen de logo-->
+        <a class="navbar-brand" href="#">
+          <img src="./recursos/img/logoIA.png" alt="Logo SEIA" width="50" height="50">
           SEIA
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -26,10 +28,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <!--- justify-content-end para alinear a la derecha-->
-          <ul class="navbar-nav"> <!--- navbar-nav para estilo de bootstrap-->
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a> <!--- home.html no es necesario-->
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./chat/chat.html">Chat</a>
@@ -38,7 +39,7 @@
               <a class="nav-link" href="#">Quiénes Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-user usuario-icono"></i></a>
+              <a class="nav-link" href="./login/login.html"><i class="fas fa-user usuario-icono"></i></a>
             </li>
           </ul>
         </div>
@@ -47,54 +48,89 @@
   </header>
 
   <main>
-    <div class="containerText">
+    <section class="containerText">
       <h1>SEIA</h1>
       <h2>Tu apoyo emocional, siempre disponible.</h2>
-      <p>Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar
-        emocional. Disponible 24/7, de forma anónima y segura.</p>
+      <p>Habla con SEIA y encuentra calma, comprensión y herramientas para tu bienestar emocional. Disponible 24/7, de forma anónima y segura.</p>
       <button type="button" class="btn btn-neomorph"><a href="./chat/chat.html">Chat</a></button>
-    </div>
+    </section>
 
-
-    <div class="containerTextLeft container">
-      <div class="beneficios-container">
-        <h3>Beneficios Clave</h3>
-        <ul>
-          <li><i class="fas fa-clock"></i> Disponible 24/7</li>
-          <li><i class="fas fa-user-secret"></i> Anonimato y privacidad</li>
-          <li><i class="fas fa-comments"></i> Soporte personalizado</li>
-          <li><i class="fas fa-hand-holding-heart"></i> Enfoque en tu bienestar</li>
-          <li><i class="fas fa-wallet"></i> Asequible</li>
-        </ul>
-      </div>
-    </div>
-    <!-- <div class="flexRight">
-      <div class="containerTextRight container">
-        <div class="testimonios-container">
-          <h3>Lo que dicen nuestros usuarios</h3>
-          <div class="card">
-            <div class="card-body">
-              <p class="card-text">"SEIA me ha ayudado mucho a manejar mi ansiedad. Me siento más tranquila y con
-                mayor control de mis emociones."</p>
-              <p class="card-text text-muted">- María, 28 años</p>
-            </div>
+    <section class="containerText">
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class=" bg-white p-4 border rounded-3 shadow-sm">
+            <h3 class="text-center mb-4">Beneficios Clave</h3>
+            <ul class="list-unstyled row">
+              <li class="col-md-6 mb-3">
+                <i class="fas fa-clock fa-2x text-primary"></i>
+                <h5>Disponible 24/7</h5>
+                <p>Accede a nuestro soporte en cualquier momento.</p>
+              </li>
+              <li class="col-md-6 mb-3">
+                <i class="fas fa-user-secret fa-2x text-primary"></i>
+                <h5>Anonimato y privacidad</h5>
+                <p>Tu identidad y conversaciones están protegidas.</p>
+              </li>
+              <li class="col-md-6 mb-3">
+                <i class="fas fa-comments fa-2x text-primary"></i>
+                <h5>Soporte personalizado</h5>
+                <p>Nuestros expertos te brindan atención personalizada.</p>
+              </li>
+              <li class="col-md-6 mb-3">
+                <i class="fas fa-hand-holding-heart fa-2x text-primary"></i>
+                <h5>Enfoque en tu bienestar</h5>
+                <p>Nos centramos en tu salud emocional y bienestar.</p>
+              </li>
+              <li class="col-md-6 mb-3">
+                <i class="fas fa-wallet fa-2x text-primary"></i>
+                <h5>Asequible</h5>
+                <p>Nuestros servicios son accesibles para todos.</p>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </div> -->
+    </section>
 
-    <div class="ContainerCat">
-      <img id="miGif" class="GatAnimated" src="./recursos/video/gifGato.gif" alt="Animación">
-    </div>
+    <section class="ContainerCat">
+      <img id="miGif" class="GatAnimated" src="./recursos/video/gifGato.gif" alt="Animación de gato" aria-hidden="true">
+    </section>
   </main>
-  <footer>
 
+  <footer class="bg-dark text-white pt-4 pb-2 mt-5git ">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>Acerca de SEIA</h5>
+          <p>SEIA es un servicio de apoyo emocional que busca brindar ayuda y orientación a personas que lo necesitan.</p>
+        </div>
+        <div class="col-md-4">
+          <h5>Enlaces útiles</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white">Home</a></li>
+            <li><a href="#" class="text-white">Chat</a></li>
+            <li><a href="#" class="text-white">Quiénes Somos</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Redes sociales</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+            <li><a href="#" class="text-white"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+            <li><a href="#" class="text-white"><i class="fab fa-instagram fa-2x"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="text-center">
+      &copy; 2023 SEIA. Todos los derechos reservados.
+    </div>
   </footer>
+
   <!-- JS de Bootstrap y dependencias desde el CDN -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="./home/js/main.js"></script>
 </body>
-
 </html>
